[tool.poetry]
name = "python101"
version = "0.1.0"
description = "a beginner python project with poetry"
authors = ["subhranshudas <subhranshu.opt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
